// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`migration > should migrate from v0 to v1 1`] = `
{
  "browserOptions": {
    "id-2": {
      "cursor": true,
    },
  },
  "screenshotOptions": {
    "id-1": {
      "clip": {
        "height": 600,
        "width": 600,
        "x": 0,
        "y": 0,
      },
    },
  },
  "stories": {
    "with-actionSets": {
      "actionSets": [
        {
          "actions": [
            {
              "args": {
                "timeout": 500,
              },
              "id": "4ps_NuM6B2",
              "name": "waitForTimeout",
            },
          ],
          "id": "k71GTTcObZen",
          "title": "delay 500",
        },
      ],
    },
    "with-defaults": {
      "screenshots": [
        {
          "actions": [
            {
              "args": {
                "options": {
                  "button": "middle",
                },
              },
              "id": "yryt9qdYHQ",
              "name": "click",
            },
          ],
          "browserOptionsId": "id-2",
          "browserType": "chromium",
          "id": "id-3",
          "index": 4,
          "props": {
            "color": "red",
            "size": 20,
          },
          "screenshotOptionsId": "id-1",
          "title": "should apply styles",
        },
      ],
    },
  },
  "version": "1",
}
`;

exports[`migration > should migrate from v0 to v2 1`] = `
{
  "browserOptions": {
    "id-6": {
      "cursor": true,
    },
  },
  "screenshotOptions": {
    "id-5": {
      "clip": {
        "height": 600,
        "width": 600,
        "x": 0,
        "y": 0,
      },
    },
  },
  "stories": {
    "with-actionSets": {
      "actionSets": [
        {
          "actions": [
            {
              "args": {
                "timeout": 500,
              },
              "name": "waitForTimeout",
            },
          ],
          "id": "k71GTTcObZen",
          "title": "delay 500",
        },
      ],
    },
    "with-defaults": {
      "screenshots": [
        {
          "actionSets": [
            {
              "actions": [
                {
                  "args": {
                    "options": {
                      "button": "middle",
                    },
                  },
                  "name": "click",
                },
              ],
              "id": "id-8",
              "title": "should apply styles actions",
            },
          ],
          "browserOptionsId": "id-6",
          "browserType": "chromium",
          "id": "id-7",
          "index": 4,
          "props": {
            "color": "red",
            "size": 20,
          },
          "screenshotOptionsId": "id-5",
          "title": "should apply styles",
        },
      ],
    },
  },
  "version": "2",
}
`;

exports[`migration > should migrate from v1 to v2 1`] = `
{
  "browserOptions": {
    "c99BcUTVviggy9H9vRFM8": {
      "cursor": true,
    },
  },
  "screenshotOptions": {
    "jTfiAoRWN1vGRuthlPSRl": {
      "clip": {
        "height": 600,
        "width": 600,
        "x": 0,
        "y": 0,
      },
    },
  },
  "stories": {
    "with-defaults": {
      "actionSets": [
        {
          "actions": [
            {
              "args": {
                "x": 497,
                "y": 113,
              },
              "name": "mouse.move",
            },
          ],
          "id": "OSzX1CUEn71R",
          "title": "vertical scroll down",
        },
      ],
      "screenshots": [
        {
          "actionSets": [
            {
              "actions": [
                {
                  "args": {
                    "selector": "html",
                  },
                  "name": "click",
                },
              ],
              "id": "id-4",
              "title": "should show on click actions",
            },
          ],
          "browserOptionsId": "c99BcUTVviggy9H9vRFM8",
          "browserType": "chromium",
          "id": "DFNYJhhPYuQHTDX",
          "index": 1,
          "props": {
            "showOnCreate": false,
          },
          "screenshotOptionsId": "jTfiAoRWN1vGRuthlPSRl",
          "title": "should show on click",
        },
      ],
    },
  },
  "version": "2",
}
`;

exports[`migration > should migrate from v1 to v3 1`] = `
{
  "browserOptions": {
    "c99BcUTVviggy9H9vRFM8": {
      "cursor": true,
    },
  },
  "screenshotOptions": {
    "jTfiAoRWN1vGRuthlPSRl": {
      "clip": {
        "height": 600,
        "width": 600,
        "x": 0,
        "y": 0,
      },
    },
  },
  "stories": {
    "with-defaults": {
      "actionSets": [
        {
          "actions": [
            {
              "args": {
                "x": 497,
                "y": 113,
              },
              "name": "mouse.move",
            },
          ],
          "id": "OSzX1CUEn71R",
          "title": "vertical scroll down",
        },
      ],
      "screenshots": [
        {
          "actionSets": [
            {
              "actions": [
                {
                  "args": {
                    "selector": "html",
                  },
                  "name": "click",
                },
              ],
              "id": "id-9",
              "title": "should show on click actions",
            },
          ],
          "browserOptionsId": "c99BcUTVviggy9H9vRFM8",
          "browserType": "chromium",
          "id": "DFNYJhhPYuQHTDX",
          "index": 1,
          "props": {
            "showOnCreate": false,
          },
          "screenshotOptionsId": "jTfiAoRWN1vGRuthlPSRl",
          "title": "should show on click",
        },
      ],
    },
  },
  "version": "3",
}
`;
